--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -2,8 +2,8 @@
 
 entries:
 - title: sidebar
-  product: Jekyll Doc Theme
-  version: 6.0
+  product: Askdata
+  version: 1.0
   folders:
 
   - title:
@@ -24,7 +24,7 @@ entries:
     folderitems:
 
     - title: Get started
-      url: /index.html
+      url: /docs/get_started/index.html
       output: web, pdf
       type: homepage
 
