--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ description: "Intended as a documentation theme based on Jekyll for technical wr
 # the description is used in the feed.xml file
 
 # needed for sitemap.xml file only
-# url: http://idratherbewriting.com
+url: http://docs.askdata.com
 # baseurl: /documentation-theme-jekyll
 
 
