--- a/_config.yml
+++ b/_config.yml
@@ -68,9 +68,9 @@ defaults:
   -
     scope:
       path: ""
-      type: "pages"
+      type: "docs"
     values:
-      layout: "page"
+      layout: "doc"
       comments: true
       # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
       search: true
