--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -28,60 +28,36 @@ entries:
       output: web, pdf
       type: homepage
 
-    - title: Get started
+  - title: Getting Started
+    output: web, pdf
+    folderitems:
+
+    - title: Getting Started
+      url: /docs/getting-started
+      output: web, pdf
+
+    - title: Your First Usage
+      url: /docs/first-usage
+      output: web, pdf
+
+    - title: Searching Data
+      url: /docs/searching-data
+      output: web, pdf
+
+    - title: Be productive with feeds
+      url: /docs/be-productive-with-feeds
+      output: web, pdf
+
+    - title: Working with others
+      url: /docs/working-with-others
+      output: web, pdf
+
+  - title: User Guide Guide
+    output: web, pdf
+
+    folderitems:
+    - title: User Guide Intro
       url: /docs/user-guide/index
-      output: web, pdf
-
-    - title: Introduction
-      url: /mydoc_introduction.html
-      output: web, pdf
-
-    - title: Supported features
-      url: /mydoc_supported_features.html
-      output: web, pdf
-
-    - title: About the theme author
-      url: /mydoc_about.html
-      output: web, pdf
-
-    - title: Support
-      url: /mydoc_support.html
-      output: web, pdf
-
-  - title: Release Notes
-    output: web, pdf
-    folderitems:
-
-    - title: 6.0 Release notes
-      url: /mydoc_release_notes_60.html
-      output: web, pdf
-
-    - title: 5.0 Release notes
-      url: /mydoc_release_notes_50.html
-      output: web, pdf
-
-  - title: Installation
-    output: web, pdf
-    folderitems:
-
-    - title: About Ruby, Gems, Bundler, etc.
-      url: /mydoc_about_ruby_gems_etc.html
-      output: web, pdf
-
-    - title: Install Jekyll on Mac
-      url: /mydoc_install_jekyll_on_mac.html
-      output: web, pdf
-
-    - title: Install Jekyll on Windows
-      url: /mydoc_install_jekyll_on_windows.html
-      output: web, pdf
-
-  - title: Authoring
-    output: web, pdf
-
-    folderitems:
-    - title: Pages
-      url: /mydoc_pages.html
       output: web, pdf
 
     - title: Posts
