--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ defaults:
       type: "docs"
     values:
       layout: "doc"
-      comments: true
+      comments: false
       # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
       search: true
       sidebar: home_sidebar
