--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -37,7 +37,7 @@ entries:
       output: web, pdf
 
     - title: Your First Usage
-      url: docs/first-usage
+      url: docs/your-first-usage
       output: web, pdf
 
     - title: Searching Data
