--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -2,7 +2,10 @@
 # If you are using the createtag script, don't leave an blank line at the end of this file.
 # In other words, the last line must be the last tag in the allowed-tags list.
 allowed-tags:
-  - getting_started
+  - getting-started
+  - admin-guide
+  - video-and-demos
+  - sdk-and-api
   - content_types
   - navigation
   - formatting
