--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -28,6 +28,10 @@ entries:
       output: web, pdf
       type: homepage
 
+    - title: Getting Started
+      url: docs/getting-started
+      output: web, pdf
+
   - title: User Guide
     output: web, pdf
     folderitems:
@@ -76,12 +80,21 @@ entries:
     output: web, pdf
 
     folderitems:
+
+    - title: Overview
+      url: docs/getting-started-video
+      output: web, pdf
+
     - title: Desktop
       url: docs/askdata-webapp-video
       output: web, pdf
 
     - title: Mobile
       url: docs/askdata-mobile-app-video-demo
+      output: web, pdf
+
+    - title: Admin
+      url: docs/video-admin-configuration
       output: web, pdf
 
   - title: API & SDK
