Added Components in How to create a Data Card

--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -36,9 +36,9 @@ entries:
     output: web, pdf
     folderitems:
 
-    - title: Getting Started
-      url: docs/getting-started
-      output: web, pdf
+    # - title: Getting Started
+    #   url: docs/getting-started
+    #   output: web, pdf
 
     - title: Your First Usage
       url: docs/your-first-usage
