Pandas module python course

--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -137,15 +137,15 @@ entries:
       url: faq
       output: web, pdf
 
-- title: Universities
-    output: web, pdf
+  - title: Universities
+      output: web, pdf
 
-    folderitems:
-    - title: Introduction to Python
-      url: docs/intro_python
-      output: web, pdf
-      
-    - title: FAQs
-      url: faq
-      output: web, pdf
+      folderitems:
+      - title: Introduction to Python
+        url: docs/intro_python
+        output: web, pdf
+        
+      - title: Pandas and Numpy Tutorial
+        url: docs/pandas.md
+        output: web, pdf
 
