--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -80,6 +80,10 @@ entries:
       url: docs/how-to-train-a-synonym
       output: web, pdf
     
+    - title: Advanced Configuration
+      url: docs/advanced-configurations
+      output: web, pdf
+    
     - title: Advanced Filter Configuration
       url: docs/dataset-filters-configuration
       output: web, pdf
