--- a/_data/blog.yaml
+++ b/_data/blog.yaml
@@ -1,6 +1,9 @@
-entries:
-- title: Blog
-  posts:
+# Blog list
+
+Entries:
+title: Blog
+posts:
+
   - title: Impact of the NLP Conversational Analytics
     slug: askdata-and-the-impact-of-the-nlp-conversational-analytics
     date: 2021-12-01
@@ -13,25 +16,25 @@ entries:
     author: Simone Di Somma
     image: https://askdata.com/assets/images/common/logo_color-nobkg.png
  
-   - title: Third post!
+  - title: Third post!
     slug: askdata-python-sdk-is-out
     date: 2021-12-05
     author: Simone Di Somma
     image: https://askdata.com/assets/images/common/logo_color-nobkg.png
     
-   - title: 4th blog post!
+  - title: 4th blog post!
     slug: askdata-python-sdk-is-out
     date: 2021-12-05
     author: Simone Di Somma
     image: https://askdata.com/assets/images/common/logo_color-nobkg.png
  
-    - title: 5th blog post!
+  - title: 5th blog post!
     slug: askdata-python-sdk-is-out
     date: 2021-12-05
     author: Simone Di Somma
     image: https://askdata.com/assets/images/common/logo_color-nobkg.png
     
-    - title: 6th blog post!
+  - title: 6th blog post!
     slug: askdata-python-sdk-is-out
     date: 2021-12-05
     author: Simone Di Somma
