--- a/_data/sidebars/blog_sidebar.yml
+++ b/_data/sidebars/blog_sidebar.yml
@@ -24,136 +24,14 @@ entries:
     folderitems:
 
     - title: Home
-      url: blog/index
+      url: features/index
       output: web, pdf
       type: homepage
 
-  - title: 2021
+  - title: Features
     output: web, pdf
     folderitems:
 
     - title: EEWS Project
-      url: blog/2021-12-17-eews-project
+      url: features/2021-12-17-eews-project
       output: web, pdf
-      
-    - title: Blog title test
-      url: blog/2021-12-14-blog-title
-      output: web, pdf
-
-  - title: Admin Guide
-    output: web, pdf
-
-    folderitems:
-    - title: Create a workspace
-      url: docs/how-to-create-an-askdata-workspace
-      output: web, pdf
-      
-    - title: Workspace configuration
-      url: docs/workspace-configuration
-      output: web, pdf
-
-    - title: Connect your data
-      url: docs/how-to-add-a-new-dataset
-      output: web, pdf
-
-    - title: Configure your Dataset
-      url: docs/how-to-configure-your-dataset
-      output: web, pdf
-
-    - title: Train a synonym
-      url: docs/how-to-train-a-synonym
-      output: web, pdf
-    
-    - title: Advanced Configuration
-      url: docs/advanced-configurations
-      output: web, pdf
-    
-    - title: Advanced Filter Configuration
-      url: docs/dataset-filters-configuration
-      output: web, pdf
-
-    - title: Configure other channels
-      url: docs/advanced-configuration-other-channels
-      output: web, pdf
-    
-    - title: Workflow Tasks
-      url: docs/tasks
-      output: web, pdf
-
-  - title: Video & Demo
-    output: web, pdf
-
-    folderitems:
-
-    - title: Overview
-      url: docs/getting-started-video
-      output: web, pdf
-
-    - title: Desktop
-      url: docs/askdata-webapp-video
-      output: web, pdf
-
-    - title: Mobile
-      url: docs/askdata-mobile-app-video
-      output: web, pdf
-
-    - title: Admin
-      url: docs/video-admin-configuration
-      output: web, pdf
-
-  - title: Developers, API & SDK
-    output: web, pdf
-
-    folderitems:
-    - title: Developers Documentation
-      url: docs/developers-documentation
-      output: web, pdf
-    
-    - title: Python SDK Documentation
-      url: docs/askdata-sdk
-      output: web, pdf
-
-    - title: API Documentation
-      url: docs/api-documentation
-      output: web, pdf
-      
-    - title: Develop new Integrations
-      url: docs/create_a_dataset_integration
-      output: web, pdf
-
-  - title: Support and FAQ
-    output: web, pdf
-
-    folderitems:
-    - title: Request Support
-      url: docs/support
-      output: web, pdf
-      
-    - title: FAQs
-      url: docs/faq
-      output: web, pdf
-
-  - title: Learn To Code
-    output: web, pdf
-
-    folderitems:
-    - title: Introduction to Python
-      url: docs/intro_python
-      output: web, pdf
-      
-    - title: Pandas Tutorial
-      url: docs/pandas
-      output: web, pdf
-    
-    - title: Data Preparation
-      url: docs/data_preparation
-      output: web, pdf
-
-    - title: Data Visualization
-      url: docs/data_visualization
-      output: web, pdf
-
-    - title: Build Your First Model
-      url: docs/build_your_first_ml_model
-      output: web, pdf
-
