--- a/_data/sidebars/blog_sidebar.yml
+++ b/_data/sidebars/blog_sidebar.yml
@@ -24,14 +24,86 @@ entries:
     folderitems:
 
     - title: Home
-      url: product/index
+      url: blog/index
       output: web, pdf
       type: homepage
 
-  - title: Features
+  - title: 2021
     output: web, pdf
     folderitems:
 
     - title: EEWS Project
-      url: features/2021-12-17-eews-project
+      url: blog/2021-12-17-eews-project
+      output: web, pdf
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project2
+      output: web, pdf
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project3
+      output: web, pdf
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project4
+      output: web, pdf
+
+  - title: 2020
+    output: web, pdf
+    folderitems:
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project5
+      output: web, pdf
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project6
+      output: web, pdf
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project7
+      output: web, pdf
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project8
+      output: web, pdf
+
+  - title: 2019
+    output: web, pdf
+    folderitems:
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project9
+      output: web, pdf
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project0
+      output: web, pdf
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project0
+      output: web, pdf
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project0
+      output: web, pdf
+
+  - title: Archived
+    output: web, pdf
+    folderitems:
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project1
+      output: web, pdf
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project2
+      output: web, pdf
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project3
+      output: web, pdf
+
+    - title: EEWS Project
+      url: blog/2021-12-17-eews-project4
       output: web, pdf
