--- a/product/product_sidebar.yml
+++ b/product/product_sidebar.yml
@@ -23,10 +23,19 @@ entries:
     output: web, pdf
     folderitems:
 
-    - title: Why Askdata
+    - title: What is Askdata
       url: product/index
       output: web, pdf
       type: homepage
+
+    - title: Why Askdata
+      url: product/why-askdata
+      output: web, pdf
+      type: homepage
+
+    - title: Video Overview
+      url: product/video-overview
+      output: web, pdf
 
   - title: Features
     output: web, pdf
@@ -48,10 +57,42 @@ entries:
       url: product/share-insights
       output: web, pdf
 
-  - title: Product Videos
+  - title: Apps
     output: web, pdf
     folderitems:
 
-    - title: Overview
-      url: product/video-overview
+    - title: iOS App
+      url: product/ios
+      output: web, pdf
+
+    - title: Android App
+      url: product/android
+      output: web, pdf
+
+  - title: Messaging
+    output: web, pdf
+    folderitems:
+
+    - title: Microsoft Teams
+      url: product/msteams
+      output: web, pdf
+
+    - title: Slack
+      url: product/slack
+      output: web, pdf
+
+  - title: Plugins
+    output: web, pdf
+    folderitems:
+
+    - title: Google Chrome Extension
+      url: product/google-chome-extension
+      output: web, pdf
+
+    - title: Excel
+      url: product/excel
+      output: web, pdf
+
+    - title: Google Sheet
+      url: product/gsheet
       output: web, pdf
