--- a/use-cases/use-cases_sidebar.yml
+++ b/use-cases/use-cases_sidebar.yml
@@ -6,10 +6,11 @@ entries:
   version: 1.0
   folders:
 
-  - title:
+  - title: Title
     output: pdf
     type: frontmatter
     folderitems:
+      
     - title:
       url: /titlepage.html
       output: pdf
