Product sidebar changes for test 2

--- a/product/product_sidebar.yml
+++ b/product/product_sidebar.yml
@@ -28,7 +28,7 @@ entries:
       output: web, pdf
       type: homepage
 
-    - title: Test
+    - title: Test 2
       url: product/test
       output: web, pdf
       type: homepage
