Product sidebar changes for test 3

--- a/product/product_sidebar.yml
+++ b/product/product_sidebar.yml
@@ -33,8 +33,8 @@ entries:
       output: web, pdf
       type: homepage
 
-    - title: Video Overview
-      url: about/video-overview
+    - title: Test 3
+      url: product/test-3
       output: web, pdf
 
   - title: Features
