Product sidebar changes for test 4

--- a/product/product_sidebar.yml
+++ b/product/product_sidebar.yml
@@ -37,6 +37,10 @@ entries:
       url: product/test-3
       output: web, pdf
 
+    - title: Test 4
+      url: product/test-4
+      output: web, pdf
+
   - title: Features
     output: web, pdf
     folderitems:
