Update partner's page

--- a/company/company_sidebar.yml
+++ b/company/company_sidebar.yml
@@ -14,11 +14,7 @@ entries:
       url: /titlepage.html
       output: pdf
       type: frontmatter
-    - title:
-      url: /tocpage.html
-      output: pdf
-      type: frontmatter
-
+      
   - title: Company
     output: web, pdf
     folderitems:
@@ -32,7 +28,7 @@ entries:
       output: web, pdf
 
     - title: Partners
-      url: company/partners
+      url: partners/index
       output: web, pdf
 
     - title: Contacts
