Created pricing and request demo

--- a/product/product_sidebar.yml
+++ b/product/product_sidebar.yml
@@ -47,6 +47,9 @@ entries:
     - title: Video Overview
       url: product/video-overview
 
+    - title: Pricing
+      url: product/pricing
+
   - title: Apps
     output: web, pdf
     folderitems:
